--- a/src/newapp/layout/app-sidebar/app-sidebar.component.scss
+++ b/src/newapp/layout/app-sidebar/app-sidebar.component.scss
@@ -69,6 +69,7 @@
     }
 
     .menu-section {
+      background: linear-gradient(to bottom, rgb(24, 166, 137) -12%, rgb(0, 111, 115) 75%);
         display: flex;
         flex-direction: column;
         flex: 1;
